--- a/index.html
+++ b/index.html
@@ -10,11 +10,47 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/font.css">
 </head>
-<body>
+<body class="active">
     <div class="loading" data-loading>
         <img src="./assets/images/loading.svg" width="55" height="55" alt="loading" class="img">
         <img src="./assets/images/loading-circle.svg" width="70" height="70" alt="" class="circle">
     </div>
+    <header class="header" data-header>
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="./assets/images/logo.svg" width="40" height="40" alt="Home">
+            </a>
+            <button class="nav-open-btn" aria-label="open menu">
+                <img src="./assets/images/menu.svg" width="17" height="17" alt="menu icon">
+            </button>
+            <nav class="navbar" data-navbar>
+                <div class="navbar-top">
+                    <a href="#" class="logo">
+                        <img src="./assets/images/nav-logo.svg" width="140" height="40" alt="Home">
+                    </a>
+                    <button class="nav-close-btn" aria-label="close menu">
+                        <span class="span one"></span>
+                        <span class="span two"></span>
+                    </button>
+                </div>
+                <ul class="navbar-list">
+                    <li class="navbar-item">
+                        <a href="#home" class="navbar-link">Home</a>
+                    </li>
+                    <li class="navbar-item">
+                        <a href="#gallery" class="navbar-link">Gallery</a>
+                    </li>
+                    <li class="navbar-item">
+                        <a href="#portfolio" class="navbar-link">Portfolio</a>
+                    </li>
+                    <li class="navbar-item">
+                        <a href="#gallery" class="navbar-link">Gallery</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="overlay" data-nav-toggler data-overlay></div>
+        </div>
+    </header>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
