--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./assets/images/loading-circle.svg" width="70" height="70" alt="" class="circle">
     </div>
 
-    <header class="header active" data-header>
+    <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
                 <img src="./assets/images/logo.svg" width="40" height="40" alt="Home">
@@ -32,8 +32,8 @@
                     <a href="#" class="logo">
                         <img src="./assets/images/nav-logo.svg" width="140" height="40" alt="Home">
                     </a>
-                    
-                    <button class="nav-close-btn" aria-label="close menu">
+
+                    <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <span class="span one"></span>
                         <span class="span two"></span>
                     </button>
@@ -41,22 +41,43 @@
 
                 <ul class="navbar-list">
                     <li class="navbar-item">
-                        <a href="#home" class="navbar-link">Home</a>
+                        <a href="#home" class="navbar-link" data-nav-link>Home</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#gallery" class="navbar-link">Gallery</a>
+                        <a href="#gallery" class="navbar-link" data-nav-link>Gallery</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#portfolio" class="navbar-link">Portfolio</a>
+                        <a href="#portfolio" class="navbar-link" data-nav-link>Portfolio</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="#gallery" class="navbar-link">Gallery</a>
+                        <a href="#gallery" class="navbar-link" data-nav-link>Gallery</a>
                     </li>
                 </ul>
             </nav>
             <div class="overlay" data-nav-toggler data-overlay></div>
         </div>
     </header>
+
+    <main>
+        <article>
+            <section class="section hero" id="home" aria-label="home">
+                <div class="container">
+                    <img src="./assets/images/hero-banner.png" width="322" height="322" alt="" class="hero-banner">
+                    <div class="hero-content">
+                        <h1 class="hero-title">Neha Shirwalker</h1>
+                        <div class="wrapper h2">
+                            <strong class="strong" data-letter-effect>Photographer</strong>
+                            <strong class="strong" data-letter-effect>Photographer</strong>
+                            <strong class="strong" data-letter-effect>Photographer</strong>
+                            <strong class="strong" data-letter-effect>Photographer</strong>
+                        </div>
+                    </div>  
+                </div>
+                <img src="./assets/images/hero-shape.svg" width="211" height="189" alt="" class="shape">
+            </section>
+        </article>
+    </main>
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
