about me section

--- a/index.html
+++ b/index.html
@@ -462,6 +462,34 @@
               </ul>
             </div>
           </section>
+
+          <section class="section about" id="about" aria-label="about me">
+            <div class="container">
+              <div class="about-content">
+                <h2 class="h2 section-title" data-reveal="right">
+                  Hi, I'm <br> Neha Shirwalker
+                </h2>
+
+                <div class="wrapper has-before" data-reveal="right">
+                  <p class="section-text">
+                    I take pictures for fun! <br> Camera: Nikon Coolpix S9300
+                  </p>
+                </div>
+              </div>
+
+              <figure class="about-banner" data-reveal="left">
+
+                <div class="img-holder has-before" style="--width: 512; --height: 684;">
+                  <img src="./assets/images/about-banner.jpg" width="512" height="684" alt="" class="img-cover">
+                </div>
+
+                <img src="./assets/images/about-shape-1.png" width="178" height="178" alt="" class="shape shape-1">  
+                <img src="./assets/images/about-shape-2.svg" width="659" height="653" alt="" class="shape shape-2">
+
+              </figure>
+              <img src="./assets/images/about-shape-3.svg" width="239" height="232" alt="" class="shape shape-3">
+            </div>
+          </section>
       </article>
     </main>
 
