--- a/index.html
+++ b/index.html
@@ -493,6 +493,44 @@
       </article>
     </main>
 
+    <footer class="footer">
+      <div class="footer-top section" id="contact">
+        <p class="section-subtitle" data-reveal>Contact Me</p>
+        <h2 class="h2 section-title" data-reveal>
+          Work inquiry, Job opportunities? Send a message.
+        </h2>
+
+        <a href="#" class="btn-icon" data-reveal>
+          <img src="./assets/images/arrow-forward.svg" width="43" height="20" alt="arrow-forward icon">
+        </a>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="container">
+  
+          <a href="#" class="logo">
+            <img src="./assets/images/logo.svg" width="40" height="40" loading="lazy" alt="Richard home">
+          </a>
+  
+          <ul class="social-list">
+            <li>
+              <a href="#" class="social-link">Fa.</a>
+            </li>
+  
+            <li>
+              <a href="#" class="social-link">Insta.</a>
+            </li>
+  
+            <li>
+              <a href="#" class="social-link">Tw.</a>
+            </li>
+          </ul>
+          <p class="copyright">Made with love</p>
+  
+        </div>
+      </div>
+    </footer>
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
