resolve merge conflicts

--- a/index.html
+++ b/index.html
@@ -514,17 +514,8 @@
                 </li>
               </ul>
     
-<<<<<<< Updated upstream
-              <a href="#contact" class="scroll-down">
-=======
-<<<<<<< Updated upstream
-              <a href="#service" class="scroll-down">
->>>>>>> Stashed changes
-                <img src="./assets/images/scroll-down.svg" width="40" height="66" loading="lazy" alt="mouse scroll">
-=======
               <a href="#contact" class="scroll-down">
                 <img src="./assets/images/scroll-down.svg" width="40" height="66"   alt="mouse scroll">
->>>>>>> Stashed changes
               </a>
     
               <img src="./assets/images/gallery-shape.svg" width="220" height="78"   alt="" class="shape">
@@ -816,15 +807,7 @@
         <div class="container">
   
           <a href="#" class="logo">
-<<<<<<< Updated upstream
-            <img src="./assets/images/logo.png" width="40" height="40" loading="lazy" alt="Richard home">
-=======
-<<<<<<< Updated upstream
-            <img src="./assets/images/logo.svg" width="40" height="40" loading="lazy" alt="Richard home">
-=======
-            <img src="./assets/images/logo.png" width="40" height="40"   alt="Richard home">
->>>>>>> Stashed changes
->>>>>>> Stashed changes
+            <img src="./assets/images/logo.png" width="40" height="40"   alt="Home">
           </a>
 
           <p class="copyright">Made with love</p>
