--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neha Shirwalker</title>
+    <title>Photo Galleryr</title>
     <meta name="title" content="Neha Shirwalker">
     <meta name="description" content="This is a photography portfolio">
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
