update shortcut icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Photo Gallery</title>
     <meta name="title" content="Neha Shirwalker">
     <meta name="description" content="This is a photography portfolio">
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/font.css">
     <link rel="preload" as="image" href="./assets/images/loading.svg">
